--- a/package.json
+++ b/package.json
@@ -6,55 +6,67 @@
   "engines": {
     "vscode": "^1.74.0"
   },
+  "publisher": "amitkumargarg",
   "activationEvents": [
-    "*"
+    "onCommand:tmp.bookmarks.loadFromApp",
+    "onCommand:tmp.bookmarks.initializeForApp",
+    "onCommand:tmp.bookmarks.searchFlowsAcross"
   ],
   "contributes": {
     "commands": [
       {
         "command": "tmp.bookmarks.loadFromApp",
-        "title": "TMP: Load Bookmarks from an App"
-      },
-      {
-        "command": "tmp.bookmarks.saveForApp",
-        "title": "TMP: Save Bookmarks for App"
+        "title": "Load Bookmarks from an App",
+        "category": "TMP"
       },
       {
         "command": "tmp.bookmarks.initializeForApp",
-        "title": "TMP: Initialize Bookmarks for an App"
+        "title": "Initialize Bookmarks for an App",
+        "category": "TMP"
+      },
+      {
+        "command": "tmp.bookmarks.saveForApp",
+        "title": "Save Bookmarks for App",
+        "category": "TMP"
       },
       {
         "command": "tmp.bookmarks.searchFlowsAcross",
-        "title": "TMP: Search Flows Across Apps with keywords"
+        "title": "Search Flows Across Apps with keywords",
+        "category": "TMP"
       },
       {
         "command": "tmp.bookmarks.openFileToLine",
-        "title": "TMP: Open File to Line",
-        "when": "false"
+        "title": "Open File to Line",
+        "icon": "${symbol-class}"
       },
       {
-        "command": "tmp.bookmarks.searchFlows",
-        "title": "TMP: Search Flows",
-        "icon": "$(filter)"
-      },
-      {
-        "command": "tmp.bookmarks.openJoinedFlow",
-        "title": "render flow",
+        "command": "tmp.bookmarks.openFlow",
+        "title": "Render Flow",
         "icon": "$(symbol-class)"
       },
       {
         "command": "tmp.bookmarks.diagram",
-        "title": "export diagram",
+        "title": "Export Diagram",
         "icon": "$(preview)"
       },
       {
         "command": "tmp.bookmarks.copyAppFlow",
-        "title": "copy json snippet",
+        "title": "Copy Json Snippet",
         "icon": "$(json)"
       },
       {
         "command": "tmp.bookmarks.removeFilter",
-        "title": "copy json snippet",
+        "title": "Disable Filter",
+        "icon": "$(search-stop)"
+      },
+      {
+        "command": "tmp.bookmarks.searchFlows",
+        "title": "Filter",
+        "icon": "$(search)"
+      },
+      {
+        "command": "tmp.bookmarks.reloadFromApp",
+        "title": "Reload Bookmarks from current App",
         "icon": "$(refresh)"
       }
     ],
@@ -73,18 +85,57 @@
       ]
     },
     "menus": {
+      "commandPalette": [
+        {
+          "command": "tmp.bookmarks.reloadFromApp",
+          "when": "false"
+        },
+        {
+          "command": "tmp.bookmarks.openFileToLine",
+          "when": "false"
+        },
+        {
+          "command": "tmp.bookmarks.searchFlows",
+          "when": "false"
+        },
+        {
+          "command": "tmp.bookmarks.openFlow",
+          "when": "false"
+        },
+        {
+          "command": "tmp.bookmarks.diagram",
+          "when": "false"
+        },
+        {
+          "command": "tmp.bookmarks.copyAppFlow",
+          "when": "false"
+        },
+        {
+          "command": "tmp.bookmarks.removeFilter",
+          "when": "false"
+        }
+      ],
       "view/title": [
         {
           "command": "tmp.bookmarks.removeFilter",
           "when": "view == allFlows && filterAllBookmarks == true",
           "showOn": "always",
-          "group": "navigation"
+          "group": "navigation",
+          "order": 1
         },
         {
           "command": "tmp.bookmarks.searchFlows",
-          "when": "view == allFlows",
+          "when": "view == allFlows && appLoaded == true",
           "showOn": "always",
-          "group": "navigation"
+          "group": "navigation",
+          "order": 2
+        },
+        {
+          "command": "tmp.bookmarks.reloadFromApp",
+          "when": "view == allFlows && appLoaded == true",
+          "showOn": "always",
+          "group": "navigation",
+          "order": 3
         }
       ],
       "view/item/context": [
@@ -94,7 +145,7 @@
           "when": "view == flowBookmarks && viewItem == bookmark"
         },
         {
-          "command": "tmp.bookmarks.openJoinedFlow",
+          "command": "tmp.bookmarks.openFlow",
           "group": "inline",
           "when": "view == allFlows && viewItem =~ /show/"
         },
