--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tmp-flowwise-bookmarks",
+  "name": "apps-flowwise-bookmarks",
   "version": "1.0.0",
-  "description": "vscode extension to create app specific bookmarks for tmp",
+  "description": "vscode extension to create flow-wise bookmarks categorized in apps",
   "main": "extension.js",
   "engines": {
     "vscode": "^1.74.0"
@@ -216,10 +216,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/amitgarg/tmp-flowwise-bookmarks.git"
+    "url": "git+https://github.com/amitgarg/apps-flow-bookmarks.git"
   },
   "keywords": [
-    "tmp",
+    "apps",
     "flowwise",
     "bookmarks",
     "diagram"
@@ -230,7 +230,7 @@
   "author": "Amit Kumar Garg",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/amitgarg/tmp-flowwise-bookmarks/issues"
+    "url": "https://github.com/amitgarg/apps-flow-bookmarks/issues"
   },
-  "homepage": "https://github.com/amitgarg/tmp-flowwise-bookmarks#readme"
+  "homepage": "https://github.com/amitgarg/apps-flow-bookmarks#readme"
 }
